spectec/test/elab/neg/ctx-builtin-dec-tparam-duplicate.spectec
;; A builtin dec declaration carries the same type-parameter name
;; twice.

builtin dec $f<T, T> : nat
